# meson-c-lib

./: Makefile  meson.build
doc/: libproject.toml.in  meson.build
src/: meson.build
test/: meson.build
